fixed units suffix being cut off (too far to the right)

--- a/client/css/_form.scss
+++ b/client/css/_form.scss
@@ -49,6 +49,19 @@
 	}
 }
 
+.bop-units-right {
+	input {
+		@include flex(1, 145px);
+	}
+}
+
+.bopDatumPopup {
+	.item-input {
+		padding-right:16px;
+	}
+}
+
+
 //.weatherCondition {
 //	&.item-input {
 //	  display: block !important;
